# rust-miner

./: Cargo.toml  LICENSE  README.md  build.rs
src/: cli.rs  coordinator.rs  keys.rs  lib.rs  main.rs  siphash.rs  stratum.rs  verify.rs
src/solver/: cpu_lean.rs  d2.rs  gpu_diagnostics.rs  gpu_fine.rs  gpu_metal.rs  gpu_wgpu.rs  lean.wgsl  mod.rs  peel.rs
tests/: c32_gate.rs
