[package]
name = "grin-cuckatoo-miner"
version = "0.1.0"
edition = "2024"
build = "build.rs"
license = "MIT"
description = "Correctness-first Cuckatoo miner with CPU, wgpu, and native Metal backends"

[features]
diagnostics = []

[dependencies]
anyhow = "1.0"
blake2 = "0.10"
bytemuck = { version = "1.23", features = ["derive"] }
clap = { version = "4.6", features = ["derive"] }
hex = "0.4"
pollster = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.53", features = ["io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
wgpu = "30.0"

[dev-dependencies]
naga = { version = "30.0", features = ["wgsl-in"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.4"
objc2-foundation = "0.3.2"
objc2-metal = "0.3.2"
